# P.P

./: .gitignore  README.md
AI/: N-Queens-Hill-Climbing.py
Codeforces/: 112A.Petya-and-Strings.cpp  122A-Lucky-Division.cpp  133A-HQ9+.cpp  141A.py  144A.py  160A-Twins.cpp  208A-Dubstep.cpp  228A.py  230A.py  236A-Boy-or-Girl.cpp  25A.py  25B.cpp  270A-Fancy.cpp  313A.cpp  318A-Even-Odds.cpp  339B.cpp  349A-Cinema-Line.cpp  376B.cpp  37A-Towers.cpp  432A.py  448A.py  472A.cpp  474A.py  478A.py  479A.py  492A.cpp  509A.py  510A.py  519A.py  519B-A-and-B-and-Compilation-Errors.cpp  520A.py  540A.cpp  577A-Multiplication-Table.cpp  581A.cpp  584A.py  595A-Vitaly-and-Night.cpp  59A.cpp  604A-Uncowed-Forces.cpp  608A-Saitama-Destroys-Hotel.cpp  609A-USB-Flash-Drives.cpp  (+27 more)
Codeforces/116A-Tram/: 116A-Tram.pro  main.cpp
Codeforces/118A-String-Task/: 118A-String-Task.pro  main.cpp
Codeforces/119A-Epic-Game/: 119A-Epic-Game.pro  main.cpp
Codeforces/131A-cAPS-lOCK/: 131A-cAPS-lOCK.pro  main.cpp
Codeforces/136A-Presents/: 136A-Presents.pro  main.cpp
Codeforces/144A-Arrival-of-the-General/: 144A-Arrival-of-the-General.pro  main.cpp
Codeforces/145A-Lucky-Conversion/: 145A-Lucky-Conversion.pro  main.cpp
Compiler/: compile.sh  cproj.l
DataStructure/Sparce Matrix/Write By Dariush/sp/: CMakeLists.txt  main.cpp
Digital system/: SimpleALU.v
Network Lab/: packet_finalproj.pkt
OS/OS/: OS.sln
Presentation and research/: iktPaperTemplateFA.docx
Sundries/: Tree.cpp  linkList.cpp  tree2.cpp  unsteadyArray.cpp
implementation of databases sysrtem/: schedules.py
(+362 files in other folders)
